...
    <string name="action_ok">OK</string>
    <string name="action_info">Info</string>
    <string name="action_clear">Clear</string>
    <string name="action_delete">Delete</string>
    <string name="action_remove">Remove</string>
    <string name="action_download">Download</string>
    <string name="action_continue">Continue</string>
    <string name="action_get_started">Get Started</string>
    <string name="action_log">Log</string>
    <string name="action_what_if">What if?</string>
    <string name="action_analyze">Analyze</string>
    <string name="action_discard">Discard</string>
    <string name="action_reset">Reset</string>
...
